--- a/wp-content/themes/wakakusastreet/package.json
+++ b/wp-content/themes/wakakusastreet/package.json
@@ -15,7 +15,10 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-stylus": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
+    "gulp-webpack": "^1.5.0",
+    "jquery": "^3.2.1",
     "nib": "^1.1.2",
     "require-dir": "^0.3.2"
   },
